improve borrowing and returning book & solve some issues
